Add javadoc annotation.